--- a/app/plans/plans.module.css
+++ b/app/plans/plans.module.css
@@ -100,3 +100,82 @@
   font-weight: 600;
   color: var(--mantine-color-primary-filled);
 }
+
+.freePlanText{
+  font-style: italic;
+  text-align: center;
+}
+
+.addOns{
+  color: var(--mantine-color-primary-filled);
+  text-decoration: underline;
+}
+
+.card {
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  box-shadow: 4px 4px 0 var(--mantine-color-secondary-filled); 
+  padding: 1rem 1rem;
+  width: 70%;
+  margin: 3rem auto;
+  background-color: #fff;
+  display: flex;
+  flex-direction: row;
+}
+
+.card > * {
+  margin: auto;
+}
+
+.cardTitle {
+  font-size: 1.2rem;
+  font-weight: 600;
+  text-align: left;
+  color: var(--mantine-color-primary-filled);
+}
+
+.price {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.benefits {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  color: #333;
+}
+
+.listIcon {
+  color: var(--mantine-color-primary-filled);
+}
+
+.benefits li {
+  margin-bottom: 0.5rem;
+}
+
+.button {
+  background-color: #0070f3;
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 8px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #005ac1;
+}
+
+@media (max-width: 62em) {
+  .card{
+    width: 100%;
+    flex-direction: column;
+  }
+  .card > * {
+    margin: 0.5rem 0.5rem;
+    margin: 0;
+  }
+}
